--- a/src/Skahal.Infrastructure.Framework.UnitTests/Skahal.Infrastructure.Framework.UnitTests.csproj
+++ b/src/Skahal.Infrastructure.Framework.UnitTests/Skahal.Infrastructure.Framework.UnitTests.csproj
@@ -25,6 +25,7 @@
     <Optimize>false</Optimize>
     <OutputPath>bin\UNITY_IPHONE</OutputPath>
     <WarningLevel>4</WarningLevel>
+    <DefineConstants>DEBUG</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -67,6 +68,7 @@
     <Compile Include="Logging\BufferLogStrategyTest.cs" />
     <Compile Include="Logging\LogStrategyBaseTest.cs" />
     <Compile Include="Logging\Stubs\LogStrategyStub.cs" />
+    <Compile Include="Repositories\EntityWithIntIdStub.cs" />
     <Compile Include="Repositories\MemoryRepositoryTest.cs" />
     <Compile Include="Commons\AppServiceTest.cs" />
     <Compile Include="Domain\EntityBaseTest.cs" />
