--- a/src/Skahal.Infrastructure.Framework/Skahal.Infrastructure.Framework.csproj
+++ b/src/Skahal.Infrastructure.Framework/Skahal.Infrastructure.Framework.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Domain\EntityWithIdBase.cs" />
+    <Compile Include="Logging\ConsoleLogStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Net\Messaging\DisconnectedEventArgs.cs" />
     <Compile Include="Net\Messaging\IMessenger.cs" />
